# Moodify-Journal

./: README.md  asset-manifest.json  index.html  precache-manifest.0cdf91661ad9f60ab52ea78ea8ac6b51.js  precache-manifest.10b8f5b234d8e321f6a5e96205faa52c.js  precache-manifest.1ded43e0dc246d7c6648c4410921a403.js  precache-manifest.1effdd2ffd31d299c4f269651ad9bd02.js  precache-manifest.2622e7145a482585956445b95db4a892.js  precache-manifest.2e417c32bf88016fb13928dc3d87a78f.js  precache-manifest.2ede1e6c4488cf89713e2ec09fe20429.js  precache-manifest.2edf20d19330e8eb11a3a070ae994ba2.js  precache-manifest.37c9c6c97a39e015accb7833437ecb88.js  precache-manifest.3803390f9406d44ea64c035168856005.js  precache-manifest.3af4499402d58cf877d753f96521054f.js  precache-manifest.3dbbf879832e03eeb1985e402d99073f.js  precache-manifest.41a9c8873be5e13da0b923630a716535.js  precache-manifest.489f6fdb00ad7ce9f2cf5d4be6580ca4.js  precache-manifest.4d7a145350d46b5002aaa935485e5f7b.js  precache-manifest.571aa1c4a84a4f5adcd100e205696e69.js  precache-manifest.5903e0f8190c9a9e49e9cc04cc9c8c3f.js  precache-manifest.5a8719aa8e40a574adffc13a52eebfdb.js  precache-manifest.6163b41b145edb633920a628040df7f7.js  precache-manifest.69cd5c60252572edbc9c8aa4dbd9dfec.js  precache-manifest.713164dd5bfb3daf20cf67c2884ca7a2.js  precache-manifest.734fbbf44294b2980b17a68c53b3ce02.js  precache-manifest.758cdeea4eafb645e0571f0a891e3520.js  precache-manifest.763cb402538c0f60df9dafe060d3efba.js  precache-manifest.7681b90570894765f20d7e53de17b3ec.js  precache-manifest.7fdb82fb1fc84adf259ced71946cace7.js  precache-manifest.7ffd51a54adb00b7596f7f749622110d.js  precache-manifest.84d32506fc02be377a5d5cd7ba6784de.js  precache-manifest.8b838561432021975740a59fce181c6f.js  precache-manifest.8bf40d616b3d4f9e501354650a735205.js  precache-manifest.937549aac8d16571005a5d5b7403d9be.js  precache-manifest.99b8a1802b175c727dcd39f9f17ba2e5.js  precache-manifest.9c8ad788eb5404ff59340a835c382f1d.js  precache-manifest.9ff11824228b8bf71a5180c81050b8d3.js  precache-manifest.a04c825994a9228cf73d93e8dd283e88.js  precache-manifest.aa5a1c0eaeb00896544259b42dda9209.js  precache-manifest.b3be775a7fb6d9524e08eeb02b5c1ac7.js  (+15 more)
NTUT_master/ADIP/HW2/: CMakeLists.txt  HW2.cpp  lena_eye50.raw
(+261 files in other folders)
